<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/popupDamageGroundFighterDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="24dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDamageMinus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="-"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txtDamage"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/btnDamagePlus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="+"
            android:layout_height="match_parent" />


    </LinearLayout>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/pierce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rdoPierce1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:checked="true"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoPierce2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoPierce3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoPierce4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoPierce5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:checked="false"
            android:layout_height="wrap_content" />

    </RadioGroup>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/breach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rdoBreach1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:checked="true"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoBreach2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoBreach3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:checked="false"
            android:layout_height="wrap_content" />

    </RadioGroup>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/weapon_critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoCritical1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:checked="true"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoCritical2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoCritical3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoCritical4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:checked="false"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdoCritical5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:checked="false"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/chkUseParry"
            android:text="@string/use_parry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/chkUseReflect"
            android:text="@string/use_reflect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_margin="24dp"
        android:id="@+id/textView1"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>